# JniDemo

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/jnidemo/: ExampleInstrumentedTest.java
app/src/main/java/com/example/jnidemo/: MainActivity.java
ccalljava/: CMakeLists.txt  build.gradle
ccalljava/src/androidTest/java/com/example/ccalljava/: ExampleInstrumentedTest.java
ccalljava/src/main/: AndroidManifest.xml
ccalljava/src/main/java/com/example/ccalljava/: CCallJavaJNI.java  CCallJava_MainActivity.java
ccalljava/src/main/jni/: c_call_java.c  com_example_ccalljava_CCallJavaJNI.h
ccalljava/src/main/res/layout/: activity_c_call_java_main.xml
dynamicregjni/: CMakeLists.txt  build.gradle
dynamicregjni/src/main/: AndroidManifest.xml
dynamicregjni/src/main/jni/: dyReg.c
dynamicregjni/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
javacallc/: CMakeLists.txt  build.gradle
javacallc/src/androidTest/java/com/example/javacallc/: ExampleInstrumentedTest.java
javacallc/src/main/: AndroidManifest.xml
javacallc/src/main/java/com/example/javacallc/: JavaCallC_MainActivity.java
javacallc/src/main/jni/: com_example_javacallc_JavaCallCJNI.h  java_call_c.c  util.h
javacallc/src/main/res/layout/: activity_java_call_c_main.xml
javacallc/src/test/java/com/example/javacallc/: ExampleUnitTest.java
useso/: build.gradle
useso/src/main/: AndroidManifest.xml
useso/src/main/res/layout/: activity_use_so_main.xml
useso/src/main/res/values/: strings.xml
(+9 files in other folders)
